# liquid

./: .gitignore  AGENTS.md  README.md  flake.nix
.github/workflows/: build-image.yml  ci.yml
code/: Cargo.toml
code/examples/: led_matrix.rs  terminal.rs
code/src/: .main.rs.swp  .particle.rs.swp  led_matrix.rs  lib.rs  main.rs  particle.rs  raster.rs  terminal.rs
docs/: ARCHITECTURE.md  DEVELOPMENT_STEPS.md
firmware/: wifi-secrets.conf.example
image/: pre-image.sh
image/config/: liquid-rpi3-lite.yaml
image/files/etc/profile.d/: liquid-dev-tools.sh
image/files/home/artist/: .liquid-shell.zsh  .zshrc
image/files/home/artist/.liquid-shell.d/: aliases.zsh  colors.zsh  git.zsh  python.zsh  startup.zsh  tmux.zsh  utils.zsh  zconf.zsh
image/files/home/artist/liquid-control/: README.md  config  doctor  restart  settings.env  start  stop
image/files/home/liquid/: .bashrc  .zshrc
image/files/home/operator/: .liquid-shell.zsh
image/files/home/operator/liquid-control/: attach  bluetooth  config  settings.env  update
image/files/usr/local/sbin/: liquid-bootstrap  liquid-doctor  liquid-grow-rootfs
image/layer/: liquid-headless-kit.yaml
nixos/: gui.nix  pi3a.nix
scripts/: bluetooth-keyboard.sh  bootstrap-pi.sh  download-image.sh  flash-sd-card-macos.sh  forget-pi-host-key.sh  liquid  sync-pi-runtime.sh  sync-pi-shell-loader.sh
